fixed layout on mobile

--- a/src/app/component/first-home-page/first-home-page.component.css
+++ b/src/app/component/first-home-page/first-home-page.component.css
@@ -64,27 +64,27 @@
     user-select: none;
 }
 
-@media screen and (max-height: 650px) {
+@media screen and (max-height: 700px) {
     .sidenavContent div {
         font-size: 12px !important;
         width: 23px !important;
     }
 }
 
-@media screen and (max-height: 600px) {
+@media screen and (max-height: 650px) {
     .sidenavContent div {
         padding-top: 0px !important;
     }
 }
 
-@media screen and (max-height: 550px) {
+@media screen and (max-height: 600px) {
     .sidenavContent div {
         font-size: 8px !important;
         width: 19px !important;
     }
 }
 
-@media screen and (max-height: 500px) {
+@media screen and (max-height: 550px) {
     .sidenavContent div {
         display: none !important;
     }
@@ -99,7 +99,7 @@
 
 @media screen and (max-width: 992px) {
     .homeSquares {
-        height: calc(100vh - 56px) !important;
+        height: none !important;
         min-height: -webkit-fill-available;
     }
 
